tests/invalid/class_body_expr_non_constant_not_allowed/main.py
class BadClassBodyExpr:
    1 + 2


def run_case() -> None:
    print("unreachable")


if __name__ == "__main__":
    run_case()
